--- a/inde.html
+++ b/inde.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="#" class="nav-jud">Website <span>Two</span></a>
+      <a href="#" class="nav-jud">Fortex<span> Two</span></a>
       <div class="navnav">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
@@ -32,6 +32,19 @@
         <a href="#"><i data-feather="shopping-cart"></i></a>
       </div>
     </nav>
+    <section id="home" class="home">
+      <main class="content">
+        <h1><span>Fortex</span> Two</h1>
+        <p>
+          Discover the best services and products we have to
+          <span style="color: rgba(245, 17, 17, 0.534)">offer</span>. Join us on
+          this journey!
+        </p>
+        <a href="#about" class="btn">Learn More</a>
+      </main>
+    </section>
+    <sectiion id="about" class="about"></sectiion>
+    <!-- ? -->
     <script>
       feather.replace();
     </script>
