--- a/inde.html
+++ b/inde.html
@@ -43,7 +43,44 @@
         <a href="#about" class="btn">Learn More</a>
       </main>
     </section>
-    <sectiion id="about" class="about"></sectiion>
+    <sectiion id="about" class="about">
+      <h2>About <span>Us</span></h2>
+      <div class="about-all">
+        <div class="about-img">
+          <img src="img/coba.jpg" alt="try" />
+        </div>
+        <div class="about-text">
+          <h3>Who We Are</h3>
+          <p>
+            we are a company that values quality and customer satisfaction. Our
+            team is dedicated to providing the best services and products in the
+            industry. We believe in innovation and excellence, striving to
+            exceed expectations in everything we do.
+          </p>
+          <br />
+
+          <p>
+            With years of experience, we have built a reputation for reliability
+            and trustworthiness. Our goal is to create lasting relationships
+            with our clients by delivering exceptional value and service. We are
+            passionate about what we do and are always looking for ways to
+            improve and innovate.
+          </p>
+        </div>
+      </div>
+      <div class="about-img2">
+        <img src="img/meet.jpg" alt="meeting" />
+      </div>
+      <div class="about-text2">
+        <h3>Our Mission</h3>
+        <p>
+          Our mission is to deliver exceptional value to our customers through
+          innovative solutions and outstanding service. We are committed to
+          continuous improvement and sustainability, ensuring that we make a
+          positive impact on our community and the environment.
+        </p>
+      </div>
+    </sectiion>
     <!-- ? -->
     <script>
       feather.replace();
